--- a/styling.css
+++ b/styling.css
@@ -104,6 +104,7 @@ footer {
   background-color: #110022;
   left: 0px;
   right: 0px;
+  top: 100px;
   bottom: 0px;
   height: 80px;
   border-top: lightblue 1px solid;
