--- a/styling.css
+++ b/styling.css
@@ -1,7 +1,6 @@
 body {
   color: lightblue;
-  margin: 0;
- margin-bottom: 100px;
+  margin: 0 0 100px 0;
   background-color: #000044;
 }
 
@@ -28,7 +27,12 @@ hr {
   border-bottom:  lightblue 1px solid;
   border-left: none;
   border-right: none;
-  height: 25px;
+  height: 15px;
+}
+
+img {
+  overflow: hidden;
+  align-content: center;
 }
 
 /* header related CSS */
@@ -145,7 +149,7 @@ header {
   text-align: center;
 }
 
-.industry_data{
+.industry_data {
   margin: 50px 25px;
 }
 
@@ -184,11 +188,11 @@ header {
   padding: 20px;
 }
 
-.industry_job_main h4{
+.industry_job_main h4 {
   margin-left: 50px;
 }
 
-.industry_job_flex{
+.industry_job_flex {
   display: flex;
   margin: auto;
 }
@@ -221,6 +225,53 @@ header {
   border-radius: 15px;
   width: 400px;
 }
+
+.profile_main {
+  margin: 50px auto;
+  width: 1000px;
+}
+
+.profile_middle_flex {
+  display: flex;
+  border-top: lightblue 1px solid;
+  border-bottom: lightblue 1px solid;
+  border-radius: 15px;
+  margin: 20px 0;
+}
+
+.profile_personal_main {
+  width: 25%;
+}
+
+.profile_personal_right {
+  border-left: white 1px solid;
+  width: 75%;
+  margin: 5px;
+  padding-left: 10px;
+  overflow: hidden;
+}
+
+.profile_personal_content {
+  height: 45%;
+  padding: 1px 5px;
+  overflow: hidden;
+  margin-top: 5px;
+}
+
+.profile_bottom_flex {
+  display: flex;
+  height: 250px;
+}
+
+.profile_bottom_content {
+  border: lightblue 1px solid;
+  border-radius: 15px;
+  width: 50%;
+  margin: 5px;
+  overflow: hidden;
+  align-content: center;
+}
+
 /* footer related CSS */
 footer {
   background-color: #110022;
