--- a/styling.css
+++ b/styling.css
@@ -292,8 +292,8 @@ header {
   border: lightblue 1px solid;
   border-radius: 15px;
   margin: auto;
-  width: 40%;
-  height: 150px;
+  width: 80%;
+  height: auto;
   overflow: hidden;
 }
 
