--- a/styling.css
+++ b/styling.css
@@ -292,7 +292,7 @@ header {
   border: lightblue 1px solid;
   border-radius: 15px;
   margin: auto;
-  width: 80%;
+  width: 600px;
   height: auto;
   overflow: hidden;
 }
